feat: add Lab Work 2

--- a/Muhammad_Baihaqi_Aulia_Asyari/jobsheet-2.ipynb
+++ b/Muhammad_Baihaqi_Aulia_Asyari/jobsheet-2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtgnSI2snOT164QJ+Xg45s",
+      "authorship_tag": "ABX9TyNoNd7/6/PYNxUTi6aAE/DE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -669,6 +669,169 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "nBqqviC5JeL-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Lab Work 2"
+      ],
+      "metadata": {
+        "id": "Sb8vPv6TJl1h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 0 - Load Library"
+      ],
+      "metadata": {
+        "id": "1nOvsYHIJ1q2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler"
+      ],
+      "metadata": {
+        "id": "NXZqEzzLJ-_4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 1 - Load Data"
+      ],
+      "metadata": {
+        "id": "W0vH1OKtKBE8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dpath = 'data/Titanic-Dataset-fixed.csv'\n",
+        "df = pd.read_csv(dpath)\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "qLiw6mjkKGbS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 2 - Slice The Data"
+      ],
+      "metadata": {
+        "id": "TKm7nXnQKwOs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = df[['Survived', 'Pclass', 'Age', 'Sex', 'Cabin']]\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "Bm32ZjMRKwrW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 3 - Encoding"
+      ],
+      "metadata": {
+        "id": "KJGErqZALE3C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "le = LabelEncoder() # initiate LabelEncoder object\n",
+        "df['Sex'] = le.fit_transform(df['Sex']) # encoding\n",
+        "df['Cabin'] = le.fit_transform(df['Cabin']) # encoding"
+      ],
+      "metadata": {
+        "id": "VyA_e9J-LF7Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 4 - Verification"
+      ],
+      "metadata": {
+        "id": "un9xps_cLRU_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "AzSZCwaKLURs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 5 - Standardization"
+      ],
+      "metadata": {
+        "id": "Z4d2TVk-LXEi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "std = StandardScaler()\n",
+        "df['Age'] = std.fit_transform(df[['Age']])"
+      ],
+      "metadata": {
+        "id": "KdwzIBVsLZcQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 6 - Verification"
+      ],
+      "metadata": {
+        "id": "MBe5ARSELdFF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "-fd8dY5ZLjkp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
